# CompPal

./: .bashrc  .gitconfig  Big_Data  README.md  example.ipynb  manage.py  scrape.html
.ipython/profile_default/: history.sqlite
.jupyter/lab/workspaces/: auto-g-1261.jupyterlab-workspace  default-37a8.jupyterlab-workspace
.local/share/jupyter/: nbsignatures.db  notebook_secret
.local/share/jupyter/runtime/: jpserver-221465-open.html  jpserver-221465.json  jupyter_cookie_secret  kernel-63e1254d-37e2-491a-94aa-77ad856d2c76.json  kernel-7ef4fee9-fa2f-45da-a87f-c55e7bbbce1c.json  kernel-dabd363b-a004-4a35-9992-7fb28f263572.json  kernel-e1de8de3-0337-43a8-a556-e766ff7c6849.json  kernel-fddb4c44-f32f-4194-9845-6662cce60b10.json
Training/AI/GenAI/: simple_rag.ipynb
Training/AI/Predictive_Modeling_Training/AI_Kit_XGBoost_Predictive_Modeling.complete/03_XGBoost/: XGBoost.ipynb
Training/HPC/oneapi-essentials-training/02_SYCL_Program_Structure/: a.out  batch_test  slurm-177.out
Training/HPC/oneapi-essentials-training/02_SYCL_Program_Structure/.ipynb_checkpoints/: SYCL_Program_Structure-checkpoint.ipynb
Training/HPC/oneapi-essentials-training/03_SYCL_Unified_Shared_Memory/: a.out
Training/HPC/sycl-performance-portability-training/: manyjob.sh
Training/Renderkit/Renderkit/: Overview.ipynb  README.md  link_to_IRTK_BD  new-workspace.jupyterlab-workspace
Training/Renderkit/Renderkit/00_Introduction_to_Jupyter/: Introduction_to_Jupyter.ipynb
Training/Renderkit/Renderkit/01_RenderKit_Intro/: RenderKit_Intro.ipynb
Training/Renderkit/Renderkit/Embree_1_minimal/: CMakeLists.txt  Embree_1_minimal.ipynb  Embree_1_minimal_occluded.ipynb  minimal.cpp  run.sh  sample.json
Training/Renderkit/Renderkit/Embree_2_triangle_geometry/: Embree_2_triangle_geometry.ipynb  run.sh  test.ppm
Training/Renderkit/Renderkit/Embree_2_triangle_geometry/triangle_geometry/: triangle_geometry.cpp  triangle_geometry_device.cpp  triangle_geometry_device.h  triangle_geometry_device_Pseudo-code.cpp
Training/Renderkit/Renderkit/OIDN/: OIDN.ipynb  build.sh  convert.sh  convert_nrm.sh  sample.json
Training/Renderkit/Renderkit/OSPRay_1_Intro/: OSPRay_1_Intro.ipynb  OSPRay_1_Intro_denoised.ipynb  run.sh
Training/Renderkit/Renderkit/OSPRay_1_Intro/src/: ospTutorial.cpp  ospTutorial_ori.cpp
Training/Renderkit/Renderkit/OSPRay_2_ospExamples/: CMakeLists.txt  OSPRay_2_ospExamples.ipynb  build.sh  run.sh  sample.json
Training/Renderkit/Renderkit/OSPRay_2_ospExamples/src/: glm_box3.h  ospExamples.cpp  utils.h
Training/Renderkit/Renderkit/OSPRay_3_asset_load/: CMakeLists.txt  OSPRay_3_asset_load.ipynb  build.sh  q  run.sh  sample.json
Training/Renderkit/Renderkit/OSPRay_3_asset_load/src/: main.cpp  utils.h
Training/Renderkit/Renderkit/OSPRay_4_Paraview/: OSPRay_4_Paraview.ipynb
Training/Renderkit/Renderkit/OSPRay_Studio/: OSPRay_Studio.ipynb
Training/Renderkit/Renderkit/OpenVKL_1_minimal/minimal-tutorial/: CMakeLists.txt  build.sh  notes.md  run.sh
Training/Renderkit/Renderkit/OpenVKL_1_minimal/minimal-tutorial/src/: create_voxels.h  field.h  framebuffer.h  minimal_01_sol.cpp  minimal_02_hans-on.cpp  minimal_02_sol.cpp  minimal_03_hands-on.cpp  minimal_03_sol.cpp  minimal_04_hand-on.cpp  minimal_04_sol.cpp  minimal_05_hand-on.cpp  minimal_05_sol.cpp  minimal_06_hands-on.cpp  minimal_06_sol.cpp
Training/Renderkit/Renderkit/OpenVKL_2_tutorial/: CMakeLists.txt  OpenVKL_2_tutorial.ipynb  build.sh  q  run.sh  sample.json
Training/Renderkit/Renderkit/OpenVKL_3_vdbvkl/: CMakeLists.txt  OpenVKL_3_vdbvkl.ipynb  build.sh  run.sh  sample.json  vdb.cpp
Training/Renderkit/Renderkit/utils/: utils.cpp  utils.h
Training/Renderkit/Renderkit/utils/checkerboard/: CMakeLists.txt  checkerboard.cpp  checkerboard.ipynb
Training/Renderkit/Renderkit/utils/rkutil/1.0.0/env/: vars.sh
Training/Renderkit/Renderkit/utils/rkutil/1.0.0/licensing/: third-party-programs.txt
Training/Renderkit/Renderkit/utils/rkutil/1.0.0/modulefiles/: intel-rkutil
Training/Renderkit/Renderkit/utils/rkutil/1.0.0/sys_check/: sys_check.sh
Training/Renderkit/SC23_Demo/OSPRay_Intro/: CMakeLists.txt  OSPRay_Intro.ipynb  build.sh  run.sh  sample.json
Training/Renderkit/SC23_Demo/OSPRay_Intro/.ipynb_checkpoints/: OSPRay_Intro-checkpoint.ipynb
Training/Renderkit/SC23_Demo/OSPRay_Intro/src/: moreTriangles.cpp  ospTutorial.cpp  volumeRender.cpp
compPal/: apps.py  forms.py  views.py
compPal/templates/: base.html  base2.html
compPal/templates/resources/: style.css
computer_recs/: asgi.py  settings.py  urls.py  wsgi.py
djangoStuff/: db.sqlite3  manage.py
djangoStuff/compPal/: apps.py  forms.py  models.py  views.py
djangoStuff/compPal/templates/base/: base.html
djangoStuff/computer_recs/: asgi.py  settings.py  urls.py  wsgi.py
